# account

./: .gitignore  README.md  WORKSPACE
client/: BUILD  auth.grpc.pb.cc  auth.pb.cc  auth.pb.h  client.cc  push.grpc.pb.h  push.pb.h
client/android/account/app/: CMakeLists.txt  build.gradle
client/android/account/app/src/main/: AndroidManifest.xml
client/android/account/app/src/main/cpp/jni/: native_auth.cpp  native_auth.hpp  native_auth_info.cpp  native_auth_info.hpp  native_auth_reply.cpp  native_auth_reply.hpp  native_push.cpp  native_push.hpp  native_push_listener.cpp  native_push_listener.hpp  native_user_info.cpp  native_user_info.hpp
client/android/account/app/src/main/java/me/ppxpp/account/activity/: SignUpActivity.java
client/android/account/app/src/main/java/me/ppxpp/account/app/: AccountApplication.java  BaseActivity.java
client/android/account/app/src/main/java/me/ppxpp/account/auth/: Auth.java  AuthInfo.java  AuthReply.java  Push.java  PushListener.java  UserInfo.java
client/android/account/app/src/main/java/me/ppxpp/account/model/: Account.java
client/android/account/app/src/main/java/me/ppxpp/account/push/: MessageReceiver.java  PushManager.java  RpcPush.java
client/android/account/app/src/main/res/layout/: activity_sign_up.xml  layout_loading.xml
client/android/account/gradle/wrapper/: gradle-wrapper.properties
client/interface/: auth.djinni  run_djinni.sh
client/native/cpp/: auth.hpp  auth_client.cpp  auth_client.hpp  auth_impl.cpp  auth_impl.hpp  auth_info.hpp  auth_reply.hpp  push.cpp  push.hpp  push_listener.hpp  user_info.hpp
deploy/: Dockerfile  docker-compose.yml
deploy/mysql/init/: init.sql
deploy/push/: Dockerfile
deploy/svr/: Dockerfile
doc/: password_hash.md  push_system_design.md  账号系统设计.md
doc/assert/: push_system.asta  push_system.docx
protos/: auth.proto  push.proto
push/: BUILD  Makefile  push.pb.cc
push/grpc/: push.grpc.pb.cc
push/include/cache/: cache.h
push/include/channel/: async_channel.h  channel_push.h  rpc_channel.h
push/include/transfer/: transfer.h
push/include/xinge/: xinge_push.h
push/src/: push_server.cc
push/src/cache/: cache.cc
push/src/channel/: async_channel.cc  channel_push.cc  rpc_channel.cc
push/src/transfer/: transfer.cc
push/src/xinge/: md5.cc  xinge_push.cc
push/test/: ptest.cc
svr/: BUILD  Makefile  auth.impl.cc  auth.impl.h  auth.pb.h  server.cc
svr/data/: AccountDb.cpp  AccountDb.h
svr/grpc/: auth.grpc.pb.h  auth.pb.cc
svr/service/: AccountService.cpp  AccountService.h
svr/utils/: Encrypt.cpp  Encrypt.h  Push.cpp  Push.h
